css overlap fixed

--- a/src/Components/OrderManagement/navbar.css
+++ b/src/Components/OrderManagement/navbar.css
@@ -1,5 +1,5 @@
 /* Main Navbar */
-.navbar {
+.order-navbar {
   background-color: #206D0F;
   height: 65px;
   display: flex;
